# youtube-human-emulator

./: README.md  check_seats.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: check_seats  proxy-updater  proxy-updater.yml  tests.yml  trigger-bot.yml
config/: logging.conf  proxies.example.txt  proxies.txt  settings.example.json  settings.json
scripts/:  view_scheduler.py  auto_proxy_updater.py  cleanup.sh  monitor_views.py  validate_proxies.py
src/: __init__.py  advanced_browser.py  browser_manager.py  human_emulator.py  proxy_rotator.py  session_manager.py  tor_manager.py  utils.py
